--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ serde = { version = "1.0.136", features = ["derive"]}
 uuid = { version = "0.8", features = ["serde", "v4"]}
 jsonwebtoken = "8.0.1"
 chrono = "0.4.19"
-
+urlencoding = "2.1.0"
+sha2 = { version = "0.10.2"}
+hex = "0.4.3"
